# indic-to-iast

./: Cargo.toml  README.md  index.html  package.json
src/: lib.rs
